syntax = "proto3";
package main.internal;

option go_package = "types/";

message SQLUser {
  uint64 ID = 1;
  string username = 2;
  string displayName = 3;
  string bio = 4;
  string avatar = 5;
  string banner = 6;
  bool isFollowersPublic = 7;
  bool isFollowingPublic = 8;
  bool isPostsPublic = 9;
  bool isLikesPublic = 10;
  bool isFollowingYou = 11;
  bool isFollowedByYou = 12;
  uint32 countLikes = 13;
  uint32 countPosts = 14;
  uint32 countFollowers = 15;
  uint32 countFollowing = 16;
  bool isYourProfile = 17;
}

message User {
  uint64 ID = 1;
  string username = 2;
  string displayName = 3;
  string bio = 4;
  string avatar = 5;
  string banner = 6;
  uint32 countLikes = 7;
  uint32 countPosts = 8;
  uint32 countFollowers = 9;
  uint32 countFollowing = 10;
  bool isFollowingYou = 11;
  bool isFollowedByYou = 12;
  string joinedAt = 13;
  bool isFollowersPublic = 14;
  bool isFollowingPublic = 15;
  bool isPostsPublic = 16;
  bool isLikesPublic = 17;
  bool isYourProfile = 18;
}


message Post {
  uint64 ID = 1;
  User author = 2;
  string content = 3;
  optional uint64 replyToID = 4;
  optional Post replyTo = 5;
  optional uint64 quotedID = 6;
  optional Post quoted = 7;
  repeated string attachments = 8;
  uint32 countLikes = 9;
  uint32 countReplies = 10;
  uint32 countQuotes = 11;
  string timePosted = 12;
  bool isLiked = 13;
  bool isBookmarked = 14;
}